[gd_scene load_steps=27 format=3 uid="uid://bh15bg0pbolku"]

[ext_resource type="Script" uid="uid://cf037liortd15" path="res://Scripts/Interactables/empty_lakitu_cloud.gd" id="1_fknpx"]
[ext_resource type="Texture2D" uid="uid://c61kan8ofhtrw" path="res://Assets/Sprites/Objects/LakituCloud.png" id="2_vyx76"]
[ext_resource type="PackedScene" uid="uid://xqivdp4tj0se" path="res://Instances/Particles/Player/skid.tscn" id="3_3lu7g"]
[ext_resource type="Script" uid="uid://bn5kyth8eyxbb" path="res://Scripts/LevelElements/achievement_unlocker.gd" id="4_nsneo"]
[ext_resource type="Resource" uid="uid://bop7qbrsma7ss" path="res://Resources/Achievements/General/LakituCloud.tres" id="5_2vxcb"]
[ext_resource type="Texture2D" uid="uid://bt2kv28ai7fp6" path="res://Assets/Sprites/Objects/LakituCloudOld.png" id="6_alvdm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f78nm"]
atlas = ExtResource("2_vyx76")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbuep"]
atlas = ExtResource("2_vyx76")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt4fi"]
atlas = ExtResource("2_vyx76")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm7a5"]
atlas = ExtResource("2_vyx76")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_521lj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f78nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbuep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt4fi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm7a5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5tx4"]
size = Vector2(18, 7)

[sub_resource type="Animation" id="Animation_vkrqd"]
resource_name = "Flash"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_dg7xg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x03ng"]
_data = {
&"Flash": SubResource("Animation_vkrqd"),
&"RESET": SubResource("Animation_dg7xg")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_q85jv"]
resource_local_to_scene = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(-10, -0.5, 0)
spread = 22.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)
anim_speed_min = 2.0
anim_speed_max = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_cy8c2"]
atlas = ExtResource("6_alvdm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7prbb"]
atlas = ExtResource("6_alvdm")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofnad"]
atlas = ExtResource("6_alvdm")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rab7p"]
atlas = ExtResource("6_alvdm")
region = Rect2(0, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pklyw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy8c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7prbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofnad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rab7p")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_exvrk"]
atlas = ExtResource("6_alvdm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_luf70"]
atlas = ExtResource("6_alvdm")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adgls"]
atlas = ExtResource("6_alvdm")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5itj"]
atlas = ExtResource("6_alvdm")
region = Rect2(32, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_615m5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exvrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luf70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adgls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5itj")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="EmptyLakituCloud" type="Node2D"]
script = ExtResource("1_fknpx")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
z_index = 2
sprite_frames = SubResource("SpriteFrames_521lj")
autoplay = "default"
frame_progress = 0.858872

[node name="Hitbox" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_h5tx4")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x03ng")
}

[node name="Skid" parent="." instance=ExtResource("3_3lu7g")]
position = Vector2(0, 0)
process_material = SubResource("ParticleProcessMaterial_q85jv")

[node name="AchievementUnlocker" type="Node" parent="."]
script = ExtResource("4_nsneo")
achievement = ExtResource("5_2vxcb")

[node name="OldCloud" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_pklyw")
autoplay = "default"

[node name="Back" type="AnimatedSprite2D" parent="OldCloud"]
show_behind_parent = true
z_index = -1
position = Vector2(0, 2)
sprite_frames = SubResource("SpriteFrames_615m5")
autoplay = "default"
frame_progress = 0.349296

[connection signal="player_entered" from="." to="AchievementUnlocker" method="unlock_achievement"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
